# flutter-plugin-experiments

./: Cargo.toml
flipper_notification/: README.md  pubspec.yaml
flipper_notification/example/: README.md  pubspec.yaml
flipper_notification/example/integration_test/: plugin_integration_test.dart
flipper_notification/example/lib/: main.dart
flipper_notification/example/test/: widget_test.dart
flipper_notification/lib/: bridge_definitions.dart  bridge_generated.dart  flipper_notification.dart  flipper_notification_method_channel.dart  flipper_notification_platform_interface.dart  native.dart
flipper_notification/test/: flipper_notification_method_channel_test.dart  flipper_notification_test.dart
flipper_notification/windows/: CMakeLists.txt  flipper_notification_plugin.cpp  flipper_notification_plugin.h  flipper_notification_plugin_c_api.cpp  rust.cmake
flipper_notification_ffi/: .metadata  README.md  ffigen.yaml  pubspec.yaml
flipper_notification_ffi/example/: README.md  pubspec.yaml
flipper_notification_ffi/lib/: flipper_notification_ffi.dart  flipper_notification_ffi_bindings_generated.dart
flipper_notification_ffi/src/: CMakeLists.txt  flipper_notification_ffi.c  flipper_notification_ffi.h
flipper_notification_ffi/windows/: CMakeLists.txt
rust_desktop/: README.md  pubspec.yaml
rust_desktop/lib/: bridge_definitions.dart  bridge_generated.dart  main.dart  native.dart
rust_desktop/test/: widget_test.dart
rust_desktop/windows/: CMakeLists.txt
src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs  test.rs
(+14 files in other folders)
