[package]
name = "rust_notification"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]


[dependencies]
anyhow = "1"
flutter_rust_bridge = "1"
notify-rust = "4.10.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = {version = "0.43.0", features =["Devices_Power", "Win32_Foundation", "Win32_System_Power", "Win32_System_Com", "Foundation", "System_Power"]}

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"

# https://learn.microsoft.com/en-US/cpp/windows/latest-supported-vc-redist?view=msvc-170
# winget install -e --id LLVM.LLVM (required when running)
# flutter_rust_bridge_codegen --rust-input ./src/api.rs --dart-output ./rust_desktop/lib/bridge_generated.dart --dart-decl-output ./rust_desktop/lib/bridge_definitions.dart